--- a/raw/css/styles.css
+++ b/raw/css/styles.css
@@ -1,3 +1,12 @@
 body{
     background-color: gold;
 }
+
+
+:root{
+    --color-primary:#2121E2;
+    /* --color-secondary:
+    --color-accent: */
+    /* --color-headings: */
+    --color-body:#918ca4;
+}
