--- a/raw/css/styles.css
+++ b/raw/css/styles.css
@@ -7,6 +7,7 @@
     --color-body:#918ca4;
 }
 
+/* Typugraphy */
 html{
     font-size: 62.5%;
 
@@ -59,3 +60,31 @@ p{
     }
 }
 
+/* Link */
+
+a{
+    text-decoration: none;
+}
+.link-arrow{
+    color: red;
+    text-transform: uppercase;
+    font-size: 2rem;
+    font-weight: bold;
+}
+
+.link-arrow::after{
+    content: '-->';
+    margin-left: 5px;
+    transition: margin 0.15s;
+}
+
+.link-arrow:hover::after{
+    margin-left: 10px;
+}
+
+@media screen and (min-width:1024px) {
+    .link-arrow{
+        font-size: 1.5rem;
+    }
+    
+}
